Fix for graal